hphp/hack/test/typecheck/naming_fail_test1.php.exp
File "naming_fail_test1.php", line 20, characters 3-4:
Variable $x is undefined, or not always defined (did you mean $b instead?) (Naming[2050])
